--- a/jsp/src/main/webapp/action/include/header.jspf
+++ b/jsp/src/main/webapp/action/include/header.jspf
@@ -1,6 +1,6 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
-<h1><a href="<%=request.getContextPath() %>/action/include/index.jsp">메인 페이지</a></h1>
+<h1><a href="<%=request.getContextPath() %>/action/include/index.jsp">로고</a></h1>
 <a href="<%=request.getContextPath() %>/action/include/mail.jsp">메일(Mail)</a>&nbsp;&nbsp;
 <a href="<%=request.getContextPath() %>/action/include/blog.jsp">블로그(Blog)</a>&nbsp;&nbsp;
 <a href="<%=request.getContextPath() %>/action/include/cafe.jsp">카페(Cafe)</a>&nbsp;&nbsp;
