--- a/shop/src/main/webapp/security/login_check.jspf
+++ b/shop/src/main/webapp/security/login_check.jspf
@@ -1,9 +1,10 @@
 <%@page import="xyz.itwill.dto.MemberDTO"%>
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
-<%-- 로그인 상태의 사용자 정보(회원정보)를 전달하여 응답하는 JSP 문서 --%>
-<%-- => 로그인 상태의 사용자만 요청 가능한 JSP 문서 --%>
-<%--
+<%-- 비로그인 상태의 사용자가 JSP 문서를 요청한 경우 에러 메세지를 출력하는 JSP 문서를 요청
+하기 위한 URL 주소를 전달하여 응답하는 코드가 작성된 JSPF 파일 --%> 
+<%-- => include Directive의 page 속성값으로 사용하기 위한 파일 --%>   
+<%
 	//session 객체에 저장된 권한 관련 속성값을 MemberDTO 객체로 반환받아 저장
 	MemberDTO loginMember=(MemberDTO)session.getAttribute("loginMember");
 
@@ -12,6 +13,4 @@
 		request.setAttribute("returnUrl", request.getContextPath()+"/index.jsp?group=error&worker=error_400");
 		return;
 	}
---%>
-<%@include file="/security/login_check.jspf" %>    
-<h1>내정보</h1>
+%>   
